# adokql-query-bot

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
frontend/: index.html  package.json
frontend/src/: App.tsx
src/adokqlbot/: main.py
src/adokqlbot/services/: adoservice.py  common.py  kqlservice.py  openai.py  settings.py
